--- a/package.json
+++ b/package.json
@@ -8,5 +8,11 @@
   },
   "author": "Nitish kumar",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.9.2",
+    "nodemon": "^3.1.9"
+  }
 }
