--- a/user/package.json
+++ b/user/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.5.0",
-    "firebase": "^11.1.0",
+    "@reduxjs/toolkit": "^2.5.1",
+    "axios": "^1.7.9",
+    "fetch-blob": "^4.0.0",
+    "firebase": "^11.2.0",
+    "form-data": "^4.0.1",
+    "imagekit": "^6.0.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
