--- a/user/package.json
+++ b/user/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "swiper": "^11.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
